Clean deprecated code.