@@ -69,7 +69,7 @@ public class Waypoint implements Comparable<Waypoint> {
 	public int compareTo(Waypoint o) {
 		
 		if (arrivalTime == null && o.arrivalTime == null)
-			return new Long(getId()).compareTo(new Long(o.getId()));
+			return Long.valueOf(getId()).compareTo((long) o.getId());
 		
 		if (arrivalTime == null && o.arrivalTime != null)
 			return 1;
